[project]
name = "confluence-adf-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Confluence pages in ADF format"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
