[project]
name = "confluence-adf-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Confluence pages in ADF format"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[project.scripts]
confluence-adf-mcp = "server:mcp.run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
