[project]
name = "confluence-adf-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Confluence pages in ADF format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["mcp", "confluence", "adf", "atlassian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[project.scripts]
confluence-adf-mcp = "server:mcp.run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
